@@ -1,7 +1,7 @@
 package com.robertx22.mine_and_slash.database.stats;
 
 import com.robertx22.mine_and_slash.saveclasses.gearitem.StatModData;
-import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.TooltipInfo;
+import com.robertx22.mine_and_slash.saveclasses.item_classes.tooltips.TooltipStatInfo;
 import com.robertx22.mine_and_slash.uncommon.enumclasses.StatTypes;
 import com.robertx22.mine_and_slash.uncommon.localization.Styles;
 import com.robertx22.mine_and_slash.uncommon.localization.Words;
@@ -15,19 +15,18 @@ import java.util.List;
 
 public class NormalStatTooltipUtils {
 
-    public static List<ITextComponent> getTooltipList(Stat stat, TooltipInfo info,
-                                                      StatModData data) {
+    public static List<ITextComponent> getTooltipList(TooltipStatInfo info) {
 
         List<ITextComponent> list = new ArrayList<ITextComponent>();
-        StatMod mod = data.getStatMod();
+        StatMod mod = info.mod;
         Stat basestat = mod.GetBaseStat();
-        ITextComponent text = getValueComp(stat, info, data).appendText(" ")
-                .appendSibling(getStatComp(info, data));
+        ITextComponent text = getValueComp(info).appendText(" ")
+                .appendSibling(getStatComp(info));
 
-        if (Screen.hasShiftDown() && info.isSet == false) {
+        if (Screen.hasShiftDown() && info.tooltipInfo.isSet == false) {
 
-            StatModData min = StatModData.Load(data.getStatMod(), info.minmax.Min);
-            StatModData max = StatModData.Load(data.getStatMod(), info.minmax.Max);
+            StatModData min = StatModData.Load(mod, info.minmax.Min);
+            StatModData max = StatModData.Load(mod, info.minmax.Max);
 
             ITextComponent extraInfo = Styles.GREENCOMP()
                     .appendSibling(new StringTextComponent(" (" + min.printValue(info.level) + " - " + max
@@ -40,21 +39,21 @@ public class NormalStatTooltipUtils {
         if (Screen.hasAltDown()) {
             list.add(Styles.BLUECOMP()
                     .appendText(" [")
-                    .appendSibling(stat.locDesc().appendText("]")));
+                    .appendSibling(info.stat.locDesc().appendText("]")));
         }
         return list;
 
     }
 
-    public static ITextComponent getStatComp(TooltipInfo info, StatModData data) {
+    public static ITextComponent getStatComp(TooltipStatInfo info) {
 
-        StatMod mod = data.getStatMod();
+        StatMod mod = info.mod;
         Stat basestat = mod.GetBaseStat();
 
         ITextComponent str = new StringTextComponent("");
 
         if (mod.Type().equals(StatTypes.Percent) && basestat.IsPercent()) {
-            if (data.GetActualVal(info.level) > 0) {
+            if (info.amount > 0) {
                 str.appendSibling(Words.Increased.locName());
             } else {
                 str.appendSibling(Words.Decreased.locName());
@@ -65,22 +64,21 @@ public class NormalStatTooltipUtils {
 
         str.appendSibling(basestat.locName());
 
-        if (info.isSet == false) {
+        if (info.tooltipInfo.isSet == false) {
             return Styles.GRAYCOMP().appendSibling(str);
         } else {
             return Styles.GREENCOMP().appendSibling(str);
         }
     }
 
-    public static ITextComponent getValueComp(Stat stat, TooltipInfo info,
-                                              StatModData data) {
+    public static ITextComponent getValueComp(TooltipStatInfo info) {
 
-        float val = data.GetActualVal(info.level);
+        float val = info.amount;
         String minusplus = val > 0 ? "+" : "";
 
         ITextComponent comp = new StringTextComponent("");
-        comp.appendText(TextFormatting.GREEN + minusplus + stat.printValue(data, info.level));
-        comp.appendSibling(StatTypes.getSuffix(data.getStatMod()));
+        comp.appendText(TextFormatting.GREEN + minusplus + info.stat.printValue(info.amount));
+        comp.appendSibling(StatTypes.getSuffix(info.mod));
         comp.appendText(TextFormatting.RESET + "");
         return comp;
 
