@@ -1,0 +1,4 @@
+package com.robertx22.mine_and_slash.saveclasses.item_classes.tooltips;
+
+public interface ITooltipStatInfo {
+}
