@@ -1,4 +1,4 @@
-package com.robertx22.mine_and_slash.saveclasses.item_classes;
+package com.robertx22.mine_and_slash.saveclasses.item_classes.tooltips;
 
 import com.robertx22.mine_and_slash.saveclasses.gearitem.StatModData;
 import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.IStatsContainer.LevelAndStats;
@@ -11,23 +11,26 @@ import java.util.List;
 
 public class MergedStats implements ITooltipList {
 
-    public List<LevelAndStats> list;
+    public List<TooltipStatInfo> list;
 
-    public MergedStats(List<LevelAndStats> list) {
-        this.list = list;
+    public MergedStats(List<LevelAndStats> list, TooltipInfo info) {
+
+        List<TooltipStatInfo> infolist = new ArrayList<>();
+
+        for (LevelAndStats part : list) {
+            for (StatModData mod : part.mods) {
+                infolist.add(new TooltipStatInfo(mod, info));
+            }
+        }
+
+        this.list = TooltipStatInfo.mergeDuplicates(infolist);
     }
 
     @Override
     public List<ITextComponent> GetTooltipString(TooltipInfo info) {
 
         List<ITextComponent> tooltip = new ArrayList<>();
-
-        for (LevelAndStats x : list) {
-            for (StatModData y : x.mods) {
-                tooltip.addAll(y.GetTooltipString(info.withLevel(x.level)));
-            }
-        }
-
+        list.forEach(x -> tooltip.addAll(x.GetTooltipString(info)));
         return tooltip;
     }
 }
